--- a/serverless.yml
+++ b/serverless.yml
@@ -88,4 +88,4 @@ custom:
   AwsAccountId: '327581952167'
   DataSetId: 'd639e92d-8c17-4497-a0c7-c8f93fb51a1f'
   IngestionId: 'TPV Data Ingestion'
-  IngestionType: "INCREMENTAL_REFRESH"
+  IngestionType: 'INCREMENTAL_REFRESH'
