--- a/serverless.yml
+++ b/serverless.yml
@@ -77,7 +77,7 @@ functions:
       - schedule: 
           name: quicksight-cron-job
           description: 'Cron job Función para llamar quicksight.createIngestion 1 min'
-          rate: rate(2 minutes)
+          rate: rate(1 minute)
           enabled: true
 
 
