--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,7 @@ provider:
     DYNAMO_TABLE_ERROR_CODES: ${self:custom.DYNAMO_TABLE_ERROR_CODES}
     DYNAMO_TABLE_TPV_DATA: ${self:custom.DYNAMO_TABLE_TPV_DATA}
     BBVA_DB_ISAM: ${self:custom.BBVA_DB_ISAM}
+    WEBHOOK: ${self:custom.WEBHOOK}
     AwsAccountId: ${self:custom.AwsAccountId}
     DataSetId: ${self:custom.DataSetId}
     IngestionId: ${self:custom.IngestionId}
@@ -77,7 +78,7 @@ functions:
       - schedule: 
           name: quicksight-cron-job
           description: 'Cron job Función para llamar quicksight.createIngestion 1 min'
-          rate: rate(1 minute)
+          rate: rate(5 minutes)
           enabled: true
 
 
@@ -101,6 +102,8 @@ custom:
   BBVA_ERRORS_SQS: "https://sqs.us-east-1.amazonaws.com/327581952167/bbva-error-handler.fifo"
 
   BBVA_DB_ISAM: 'http://ec2-54-234-93-168.compute-1.amazonaws.com:3300/isam/'
+
+  WEBHOOK: "https://hooks.slack.com/services/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"
 
   AwsAccountId: '327581952167'
   DataSetId: 'd639e92d-8c17-4497-a0c7-c8f93fb51a1f'
