--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "glob": "^7.1.7",
     "jgeoip": "^0.3.3",
+    "mailgun-js": "^0.22.0",
     "path": "^0.12.7",
     "request-ip": "^2.1.3",
     "serverless-http": "^2.7.0"
