--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,7 @@ provider:
     - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
     - arn:aws:iam::aws:policy/AmazonSQSFullAccess
     - arn:aws:iam::aws:policy/AmazonSNSFullAccess
+    - arn:aws:iam::aws:policy/AmazonS3FullAccess
     - arn:aws:iam::aws:policy/AmazonKinesisFullAccess
   iamRoleStatements:
     - Effect: 'Allow'
